multiple header files

--- a/PairProgramming/ParticleInheritance/ParticlesInheritance/ParticlesInheritance.vcxproj
+++ b/PairProgramming/ParticleInheritance/ParticlesInheritance/ParticlesInheritance.vcxproj
@@ -140,6 +140,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h" />
+    <ClInclude Include="ParticleEffects.h" />
+    <ClInclude Include="Particle.h" />
     <ClInclude Include="Random.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
