--- a/PairProgramming/ParticleInheritance/ParticlesInheritance/ParticlesInheritance.vcxproj.filters
+++ b/PairProgramming/ParticleInheritance/ParticlesInheritance/ParticlesInheritance.vcxproj.filters
@@ -33,7 +33,13 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="Random.h">
-      <Filter>Header Files</Filter>
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Particle.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ParticleEffects.h">
+      <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
