--- a/PairProgramming/ParticleInheritance/ParticlesInheritance/ParticlesInheritance.vcxproj.filters
+++ b/PairProgramming/ParticleInheritance/ParticlesInheritance/ParticlesInheritance.vcxproj.filters
@@ -27,6 +27,15 @@
     <ClCompile Include="ParticleEffects.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CircleParticle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FireworkEffect.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SnowEffect.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -39,6 +48,15 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="ParticleEffects.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CircleParticle.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FireworkEffect.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SnowEffect.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
