--- a/Pong/Pong/Pong.vcxproj.filters
+++ b/Pong/Pong/Pong.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Paddle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Ball.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -38,5 +41,30 @@
     <ClInclude Include="Paddle.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="Ball.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Random.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Font Include="arial.ttf">
+      <Filter>Source Files</Filter>
+    </Font>
+  </ItemGroup>
+  <ItemGroup>
+    <Media Include="paddle.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
+    <Media Include="score.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
+    <Media Include="wall.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
+    <Media Include="win.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
   </ItemGroup>
 </Project>
